# tasty-laws

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  README.md  cabal-min.config  cabal.project  smallcheck-laws.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.6.yaml  stack-8.8.yaml  tasty-laws.cabal
Test/SmallCheck/Laws/: Applicative.hs  Functor.hs  Monad.hs  Monoid.hs
Test/Tasty/Laws/: Applicative.hs  Functor.hs  Monad.hs  Monoid.hs
Test/Tasty/SmallCheck/Laws/: Applicative.hs  Functor.hs  Monad.hs  Monoid.hs
scripts/: deb-deps.sh
tests/: tasty.hs
