name:                smallcheck-laws
version:             0.0
synopsis:            SmallCheck properties for standard type classes
description:
  Automatic `smallcheck` properties and `tasty` runners for:
  .
  - Monoid laws
  - Functor laws
  - Monad laws
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md CHANGELOG.md
                     stack.yaml

source-repository head
  type: git
  location: git://github.com/jdnavarro/smallcheck-laws.git

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     Test.SmallCheck.Laws.Functor,
                       Test.SmallCheck.Laws.Monoid,
                       Test.Tasty.SmallCheck.Laws.Functor,
                       Test.Tasty.SmallCheck.Laws.Monoid
  build-depends:       base >=4.6 && <4.9,
                       smallcheck >=1.1.1,
                       smallcheck-series >=0.3,
                       tasty >=0.10,
                       tasty-smallcheck >=0.8
  if impl(ghc < 7.10)
     build-depends: transformers >=0.3.0.0

test-suite tasty
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tasty.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.6 && <4.9,
                       smallcheck >=1.1,
                       tasty >=0.10,
                       smallcheck-laws
