name:                tasty-laws
version:             0.3.1
synopsis:            Test common laws
description:
  Preassembled 'tasty' 'TestTree's for property testing 'Monoid', 'Functor',
  'Applicative' and 'Monad' laws.
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
homepage:            https://github.com/jdnavarro/tasty-laws
bug-reports:         https://github.com/jdnavarro/tasty-laws/issues
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2
extra-source-files:  README.md CHANGELOG.md stack.yaml

source-repository head
  type: git
  location: git://github.com/jdnavarro/tasty-laws.git

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     Test.Tasty.Laws.Applicative,
                       Test.Tasty.Laws.Functor,
                       Test.Tasty.Laws.Monad,
                       Test.Tasty.Laws.Monoid
  build-depends:       base >=4.6 && <4.17,
                       laws,
                       tasty >=0.10,
                       tasty-dumbcheck
  if impl(ghc < 7.8)
     build-depends: tagged >=0.7.2

test-suite tasty
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tasty.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.6 && <4.17,
                       tasty >=0.10,
                       tasty-dumbcheck,
                       tasty-laws

  if impl(ghc < 7.8)
     build-depends: tagged >=0.7.2
